--- a/mustra-react-web/package.json
+++ b/mustra-react-web/package.json
@@ -12,12 +12,13 @@
         "bootstrap": "^4.4.1",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
+        "react-router-dom": "^5.1.2",
         "react-scripts": "3.4.1",
         "reactstrap": "^8.4.1"
     },
     "scripts": {
-        "start": "react-scripts start",
-        "build": "react-scripts build",
+        "start": "cross-env NODE_PATH=src react-scripts start",
+        "build": "cross-env NODE_PATH=src react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject"
     },
